force-app/main/default/objects/Stock__c/fields/AI_Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Summary__c</fullName>
    <label>AI Risk Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>