force-app/main/default/objects/Stock__c/fields/Daily_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Velocity__c</fullName>
    <label>Daily Velocity</label>
    <description>Average units sold per day (last 30 days)</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>