force-app/main/default/objects/Stock__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <label>Days Remaining</label>
    <description
  >Estimated days until stockout based on current velocity</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>