force-app/main/default/objects/Stock__c/fields/Forecasted_Demand__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Demand__c</fullName>
    <label>Forecasted Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>