force-app/main/default/objects/Stock__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <description
  >AI-calculated risk level based on velocity and current stock</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Critical</fullName><label>Critical</label><default
        >false</default></value>
            <value><fullName>At Risk</fullName><label>At Risk</label><default
        >false</default></value>
            <value><fullName>Healthy</fullName><label>Healthy</label><default
        >true</default></value>
            <value><fullName>Overstock</fullName><label
        >Overstock</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>